[package]
name = "iron"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.19"
regex = "1"
fnv = "1.0"

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
